assets/style.css
::-webkit-scrollbar { 
    display:none !important
}
body{
	position:relative;
	margin: 0;
	overflow: -moz-scrollbars-none;
	/*overflow-y: hidden;*/
}

#scrollBar{
	display:none;
	position:fixed;
	opacity:0;
	height:7.5%;
	width:100%;
	background-color: #ababab;
	z-index:1;
	
	text-align:center;
}

#home{
	/*background: url("images/beach-sunset-thailand.jpg") no-repeat center center scroll;*/
	background: url("images/Skype_Picture_2019_10_28T00_51_36_222Z.jpeg") no-repeat center center scroll;
	background-color: #cccccc;
	background-size: cover;
	position:relative; 
	height:100%; 
	padding:0; 
	margin:0; 
	top:0; 
	left:0
}

#main{
	position:relative;
	
	width:35%;
	padding-top:35%;
	
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	
	text-align:center;
	
	border-radius:50%;
	background-color: rgba(204, 204, 204, 0.3);
}

#mainBubble{
	position:absolute;
	top:10%;
	left:0;
	bottom:0;
	right:0;
}

#about{
	position:relative;
	width:100%;
	height: 92.5%;
	background-color: #eeeeee;
	text-align:center;
}

#aboutText{
	width:80%;
}

#skills{
	position:relative;
	width:100%;
	height: 92.5%;
	background-color: #dddddd;
	text-align:center;
}

#projects{
	position:relative;
	width:100%;
	height: 92.5%;
	background-color: #cccccc;
	text-align:center;
}

.info{
	padding:5%;
	position:relative;
	top: 42.5%;
	left: 50%;
	transform: translate(-50%, -50%);
	
}

.buttonCircular{
	border-radius:50%;
	cursor:pointer;
}

.text{
	font-family: "Spectral";
	font-size: 1.45vw;
}

.text h1{
	display:inline;
	color: #ffffff;
	font-size: 2.35vw;
}

.text h2{
	display:inline;
	font-size: 2.0vw;
}

.text h3{
	display:inline;
	font-size: 1.5vw;
}

